k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-api
  template:
    metadata:
      labels:
        app: car-api
    spec:
      containers:
      - name: car-api
        imagePullPolicy: Always
        image: 237703xxxxx.dkr.ecr.us-east-1.amazonaws.com/-car-api:latest
        ports:
        - containerPort: 8080
